--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         async function gerarResposta() {
             const pergunta = document.getElementById('pergunta').value;
 
-            const response = await fetch('http:localhost:3333/perguntar', {
+            const response = await fetch('/perguntar', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
