Atualiza os nomes do projeto para refletir a nova convenção de nomenclatura

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Architronic-IA</title>
+    <title>BobIA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div id="container">
-        <h1>Architronic-IA</h1>
+        <h1>BobIA</h1>
         <textarea id="pergunta" type="text" placeholder="Digite a pergunta..."></textarea>
         <br><br>
         <button onclick="gerarResposta()">Gerar Resposta</button>
